--- a/package.json
+++ b/package.json
@@ -2,32 +2,40 @@
   "name": "todo-app",
   "version": "1.0.0",
   "description": "App for those who forget things",
-  "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server -d -w",
+    "sync-frontend": "webpack -d -w",
+    "start-dev-server": "./node_modules/.bin/nodemon server/server.js --exec ./node_modules/.bin/babel-node",
+    "start": "./node_modules/.bin/concurrently 'npm run sync-frontend' 'npm run start-dev-server'",
+    "build-dev": "webpack -d",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "z.gatelis",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.14.0",
     "lodash": "^4.15.0",
     "material-ui": "^0.15.4",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-tap-event-plugin": "^1.0.0",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "^6.13.0",
+    "babel-root-import": "^4.1.1",
+    "concurrently": "^2.2.0",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.24.0",
     "eslint": "^3.4.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^3.8.0",
+    "nodemon": "^1.10.2",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
