--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.14.0",
     "lodash": "^4.15.0",
     "material-ui": "^0.15.4",
+    "mongodb": "^2.2.9",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-tap-event-plugin": "^1.0.0",
