--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start-dev-server": "./node_modules/.bin/nodemon server/server.js --exec ./node_modules/.bin/babel-node",
     "start": "./node_modules/.bin/concurrently 'npm run sync-frontend' 'npm run start-dev-server'",
     "prod": "./node_modules/.bin/webpack -p && ./node_modules/.bin/babel server -d dist && node dist/server.js",
-    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register -R spec tests"
+    "server-tests": "./node_modules/.bin/mocha --compilers js:babel-core/register -R spec tests/backend",
+    "frontend-tests": "NODE_PATH=./app ./node_modules/.bin/mocha --compilers js:babel-core/register -R spec tests/frontend/setup.js tests/frontend/**/*.spec.js",
+    "test": "npm run server-tests && npm run frontend-tests"
   },
   "author": "z.gatelis",
   "license": "ISC",
@@ -36,11 +38,14 @@
     "concurrently": "^2.2.0",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.24.0",
+    "enzyme": "^2.4.1",
     "eslint": "^3.4.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "jsdom": "^9.5.0",
     "mocha": "^3.0.2",
     "node-sass": "^3.8.0",
     "nodemon": "^1.10.2",
+    "react-addons-test-utils": "^15.3.1",
     "sass-loader": "^4.0.0",
     "sinon": "^1.17.5",
     "style-loader": "^0.13.1",
